--- a/src/podcasts.css
+++ b/src/podcasts.css
@@ -15,12 +15,15 @@ body {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-decoration: none;
+    color: black;
 }
 
 .header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 5px;
 }
 
 .header-links {
@@ -43,7 +46,7 @@ body {
 
 .main-title {
     margin-top: 0px;
-    font-size: 350px;
+    font-size: 275px;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 20px;
